10.0.0 Major enhancements to connection stability for autoplug web users. 🎉       Using Netty as networking library under the hood to achieve this.       Make sure you update if you are using the web panel since the old client won't be able to connect to the panel anymore.       I currently have more time to focus on this project, thus feel free to dm me any ideas and bugs/annoyances that you have when using the web panel. 🙌